# basics-projects

./: .gitignore
cybersecurity/c2-framework/: README.md
cybersecurity/c2-framework/agent/: Cargo.toml
cybersecurity/c2-framework/agent/src/: commands.rs  config.rs  logging.rs  main.rs  systeminfo.rs
cybersecurity/c2-framework/common/: Cargo.toml
cybersecurity/c2-framework/common/src/: schema.rs
cybersecurity/c2-framework/console/: Cargo.toml
cybersecurity/c2-framework/console/src/: actions.rs  constants.rs  info.rs  main.rs
cybersecurity/c2-framework/etc/: dbdiagram
cybersecurity/c2-framework/server/: go.mod  main.go
cybersecurity/c2-framework/server/c2/: http.go
cybersecurity/c2-framework/server/database/: init.go  operations.go  schemas.go
cybersecurity/c2-framework/server/database/sql/: tables.sql
cybersecurity/c2-framework/server/handlers/: agent.go  operator.go
rust/operating-system/: Cargo.toml  README.md
rust/operating-system/.cargo/: config.toml
rust/operating-system/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
rust/operating-system/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
rust/wgpu-fundamentals/: Cargo.toml  README.md
rust/wgpu-fundamentals/src/: lib.rs  main.rs
