[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
chrono = "0.4.43"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38.1" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
